# bevy_sprite_material

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yaml
examples/: changing_colors.rs
src/: bundle.rs  extract.rs  lib.rs  sprite.rs  texture_atlas.rs
