[package]
name = "bevy_sprite_material"
version = "0.1.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
license-file = "./LICENSE"
repository = "https://github.com/ManevilleF/bevy_sprite_material"
readme = "README.md"
description = "Plugin to use materials for sprites"
keywords = ["bevy", "sprite", "material"]
exclude = ["docs", ".github", ".gitignore", "assets"]
documentation = "http://docs.rs/bevy_sprite_material"
categories = ["game-engines", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_sprite = "0.7"
bevy_math = "0.7"
bevy_ecs = "0.7"
bevy_render = "0.7"
bevy_transform = "0.7"
bevy_asset = "0.7"
bevy_app = "0.7"

[dev-dependencies.bevy]
version= "0.7"
default-features = false
features = ["render", "bevy_winit", "x11"]

[[example]]
name = "changing_colors"