[package]
name = "bevy_sprite_material"
version = "0.2.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
license-file = "./LICENSE"
repository = "https://github.com/ManevilleF/bevy_sprite_material"
readme = "README.md"
description = "Plugin to use materials for sprites"
keywords = ["bevy", "sprite", "material"]
exclude = ["docs", ".github", ".gitignore", "assets"]
documentation = "http://docs.rs/bevy_sprite_material"
categories = ["game-engines", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copyless = "0.1"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
default-features = false
features = ["bevy_sprite", "png"]

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
default-features = false
features = ["render", "bevy_winit", "x11"]

[[example]]
name = "changing_colors"